objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ChargentSFA__Charge_Date__c</fullName>
        <inlineHelpText>This field is the day of the month that Chargent will attempt the recurring transaction</inlineHelpText>
        <label>Charge Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Currency__c</fullName>
        <label>Currency (Old)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>Pound Sterling</fullName>
                </value>
                <value>
                    <fullName>Russian Ruble</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>Swiss Franc</fullName>
                </value>
                <value>
                    <fullName>US Dollar</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Thailand Baht</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Customer_IP__c</fullName>
        <description>This field holds the IP address of your customer.  Currently this is only sent to Authorize.net as of Summer &apos;13.

Only sends to Authorize.net. Contact chargent@appfrontier.com to inquire about applying this to other gateways.</description>
        <inlineHelpText>Authorize.net customers can store the IP address here to have it sent directly to the gateway to be part of your gateway transaction record.</inlineHelpText>
        <label>Customer IP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Customer_Token__c</fullName>
        <description>PayFlow Pro Recurring Profile ID</description>
        <label>Customer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default should be &apos;LV&apos;.</inlineHelpText>
        <label>Gateway</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose an Active Gateway record</errorMessage>
            <filterItems>
                <field>ChargentBase__Gateway__c.ChargentBase__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ChargentBase__Gateway__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Invoice_Number__c</fullName>
        <description>Stores a unique invoice ID entered by the user.

Only sends to Authorize.net. Contact chargent@appfrontier.com to inquire about applying this to other gateways.</description>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Last_Recurring_Transaction__c</fullName>
        <label>Last Recurring Transaction</label>
        <summarizedField>ChargentSFA__Transaction__c.ChargentSFA__Gateway_Date__c</summarizedField>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Type__c</field>
            <operation>equals</operation>
            <value>Charge</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentSFA__Transaction__c.ChargentSFA__Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Manual_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when you want to authorize or charge an amount different than the amount due on the opportunity or order. This will prevent the &quot;Charge Amount&quot; from being automatically calculated and updated.</inlineHelpText>
        <label>Manual Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Next_Transaction_Date__c</fullName>
        <inlineHelpText>Use this field to double check and ensure that your recurring payment details are setup correctly.  This field DOES NOT control WHEN a charge will be done.  Rather Chargent applies the same logic here that our scheduling engine does.</inlineHelpText>
        <label>Next Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__OrderNumber__c</fullName>
        <inlineHelpText>This field has been deprecated and replaced with &quot;Invoice Number&quot; (text 255)</inlineHelpText>
        <label>Do Not Use (Order Number)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__OrderSource__c</fullName>
        <description>The orderSource element defines the order entry source for the type of transaction.</description>
        <inlineHelpText>The Order Source field defines the order entry source for this transaction.</inlineHelpText>
        <label>Order Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ecommerce</fullName>
                    <default>true</default>
                    <label>ecommerce</label>
                </value>
                <value>
                    <fullName>installment</fullName>
                </value>
                <value>
                    <fullName>mailorder</fullName>
                </value>
                <value>
                    <fullName>recurring</fullName>
                </value>
                <value>
                    <fullName>retail</fullName>
                </value>
                <value>
                    <fullName>telephone</fullName>
                </value>
                <value>
                    <fullName>recurringtel</fullName>
                </value>
                <value>
                    <fullName>Prearranged Payment and Deposit</fullName>
                </value>
                <value>
                    <fullName>Corporate Cash Disbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Order_Information__c</fullName>
        <description>Stores user entered data about this Opportunity.  The contents of this field is sent to Authorize.net when transactions are initiated.

Only sends to Authorize.net. Contact chargent@appfrontier.com to inquire about applying this to other gateways.</description>
        <inlineHelpText>For Authorize.net only.  Enter information about this opportunity to be sent to the gateway.</inlineHelpText>
        <label>Order Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Count__c</fullName>
        <inlineHelpText>If &quot;Payment Stop&quot; is set to &quot;Count&quot; please enter the number of total payments in the series</inlineHelpText>
        <label>Payment Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_End_Date__c</fullName>
        <label>Payment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                    <default>true</default>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bimonthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Received__c</fullName>
        <label>Payment Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Source</label>
        <referenceTo>ChargentBase__Payment_Source__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Start_Date__c</fullName>
        <label>Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Stop__c</fullName>
        <inlineHelpText>For any payment frequency other than &quot;Once&quot; please choose the date to end the payment series, or the total number of transactions. You can also run the series until the Balance Due is $0 or choose &quot;Unending&quot;.</inlineHelpText>
        <label>Payment Stop</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChargentSFA__Payment_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Balance Due</fullName>
                </value>
                <value>
                    <fullName>Unending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Address_Line_2__c</fullName>
        <label>Shipping Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Amount__c</fullName>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Company__c</fullName>
        <label>Shipping Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Duty__c</fullName>
        <label>Shipping Duty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_First__c</fullName>
        <label>Shipping First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Last__c</fullName>
        <label>Shipping Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Shipping_Zip__c</fullName>
        <label>Shipping Zip/Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Tokenization__c</fullName>
        <description>Tokenization must be enabled at both in your gateway&apos;s virtual terminal and in the Chargent gateway record configuration.</description>
        <inlineHelpText>A unique token provided by the Gateway which replaces the payment account information on a transaction.</inlineHelpText>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Total__c</fullName>
        <formula>Amount+ChargentSFA__Tax__c+ChargentSFA__Shipping_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Transaction_Count_Recurring__c</fullName>
        <inlineHelpText>Total number of approved transactions created by a recurring payment schedule</inlineHelpText>
        <label>Transaction Count Recurring</label>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Pre-settlement</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Type__c</field>
            <operation>equals</operation>
            <value>Charge, Batch Processing</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentSFA__Transaction__c.ChargentSFA__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Transaction_Count__c</fullName>
        <label>Transaction Count</label>
        <summaryForeignKey>ChargentSFA__Transaction__c.ChargentSFA__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Transaction_Total__c</fullName>
        <inlineHelpText>Total of all Charges with a Response of &quot;Approved&quot;</inlineHelpText>
        <label>Transaction Total</label>
        <summarizedField>ChargentSFA__Transaction__c.ChargentSFA__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund, Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentSFA__Transaction__c.ChargentSFA__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Update_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__UseTokenization__c</fullName>
        <description>If TRUE then the associated Gateway record has Tokenization enabled, if FALSE the associated Gateway record does not have tokenization enabled.</description>
        <formula>IF(ChargentSFA__Gateway__r.ChargentBase__Use_Tokenization__c, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field simply states whether or not the associated gateway record has tokenization enabled.</inlineHelpText>
        <label>Use Tokenization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Client_Source__c</fullName>
        <formula>Account.Child_Client_Source__c</formula>
        <inlineHelpText>The original child campaign source of the client.</inlineHelpText>
        <label>Child Client Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Requested_Refund__c</fullName>
        <description>If the client requested a refund mark &quot;Yes&quot;. Cascades down to the transaction and influences approval process.</description>
        <label>Client Requested Refund</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Source__c</fullName>
        <formula>IF(
AND(TEXT(Account.Source__c) &lt;&gt; &quot;Unknown&quot;, ISBLANK(Account.Campaign__c), ISBLANK(Account.Primary_Campaign__c), NOT(ISBLANK(TEXT(Account.Source__c)))), TEXT(Account.Source__c),
IF(
AND(ISBLANK(Account.Campaign__c), NOT(ISBLANK(Account.Primary_Campaign__c)), NOT(ISBLANK(TEXT(Account.Source__c)))), Account.Primary_Campaign__c,
IF(
AND(ISBLANK(Account.Campaign__c), NOT(ISBLANK(Account.Primary_Campaign__c)), ISBLANK(TEXT(Account.Source__c))), Account.Primary_Campaign__c,
Account.Campaign__c)))</formula>
        <inlineHelpText>The original source of the client.</inlineHelpText>
        <label>Parent Client Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <formula>IF(
(ISPICKVAL(AVSFQB__Product_Name__c , &quot;Anderson Mail Forwarding, 1 Year, Renewal&quot;)), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Type</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_2_Weeks__c</fullName>
        <formula>CloseDate  + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close + 2 Weeks</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <description>Records the name of the user closing the sale, when closed won.</description>
        <label>Closed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date__c</fullName>
        <label>Closed Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dissolving</fullName>
                </value>
                <value>
                    <fullName>Inactive - SOS</fullName>
                </value>
                <value>
                    <fullName>Non Payment</fullName>
                </value>
                <value>
                    <fullName>Not Utilizing</fullName>
                </value>
                <value>
                    <fullName>Other (Explain in Notes)</fullName>
                    <default>true</default>
                    <label>Other (Explain in Notes)</label>
                </value>
                <value>
                    <fullName>RA Change</fullName>
                </value>
                <value>
                    <fullName>Renewal cost too high</fullName>
                </value>
                <value>
                    <fullName>Service Complaint</fullName>
                </value>
                <value>
                    <fullName>Client filing on their own.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reasons__c</fullName>
        <inlineHelpText>If &quot;Other&quot; is selected as the Closed Lost Reason, please explain why.</inlineHelpText>
        <label>Closed Lost Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Formation__c</fullName>
        <label>Company Formation Test</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_NV_Commerce_Tax__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;ofn=Nevada Commerce Tax Filing&quot; +
&quot;&amp;emailtoID=003U000000pEt9q&quot; +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid= a0y0B00000BX5x1&quot; +
&quot;&amp;qmode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor NV Commerce Tax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_No_Service_401__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[Entity]00O0B000003ilrG&quot; +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Pension Tax Mailer&quot; +
&quot;&amp;TemplateID=a0z0B00000FXcrC&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0y0B00000BhrHO&quot; +
&quot;&amp;qmode=SendEmail&quot; +
&quot;&amp;APDF=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor - No Service - 401</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_No_Service_PSP__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[Entity]00O0B000003ilrG, [SalesEntity]00OU0000001rPVP&quot; +
&quot;&amp;TemplateID=a0z0B00000FXcdD&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Pension Tax Mailer&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0y0B00000BhrIL&quot; +
&quot;&amp;qmode=SendEmail&quot; +
&quot;&amp;APDF=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor No Serv PSP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Pension_Renewal_Email__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[Entity]00O0B000003ilrG&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;TemplateID=a0z0B00000FXbuR&quot; +
&quot;&amp;ofn=Administrative+Service+Declaration&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0y0B00000BX9xt&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Pension Renewal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_RA_Resignation__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; +
&quot;&amp;ofn=Registered Agent Resignation&quot; +
&quot;&amp;emailtoID=003U000000pEt9q&quot; +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid= a0y0B00000BfgtB&quot; +
&quot;&amp;qmode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor - RA Resignation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Texas_Corp_Past_Due__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; +
&quot;&amp;queryid=[Transaction1]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Texas Franchise Tax Renewal+&quot; + QB_Invoice__c +
&quot;&amp;TemplateID=a0z0B00000FXjBc&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;cetid= a0y0B00000DCKvi&quot; +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Texas Corp Past Due</label>
        <type>Text</type>
    </fields>
</CustomObject>